--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,9 +18,10 @@ set(SOURCES
 
 set(TESTS
     ${CMAKE_CURRENT_SOURCE_DIR}/tests/blur_tests.cu
+    ${CMAKE_CURRENT_SOURCE_DIR}/tests/collatz.cu
     ${CMAKE_CURRENT_SOURCE_DIR}/tests/main.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/tests/max_element.cu
-    ${CMAKE_CURRENT_SOURCE_DIR}/tests/vector_add_tests.cu
+    ${CMAKE_CURRENT_SOURCE_DIR}/tests/vector_pow.cu
 )
 
 
